# wavemux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
daemon/src/: audiomanager.cpp  audiomanager.h  com.wavemux.Daemon.xml  configmanager.cpp  configmanager.h  main.cpp
daemon/src/dbus/: channeldbusadaptor.cpp  channeldbusadaptor.h  configdbusadaptor.cpp  configdbusadaptor.h  devicedbusadaptor.cpp  devicedbusadaptor.h  streamdbusadaptor.cpp  streamdbusadaptor.h
docs/: ARCHITECTURE.md  Plan.md  roadmap.md
packaging/: wavemux.service
shared/include/wavemux/: types.h
shared/src/: dbusclient.cpp  dbusclient.h  types.cpp
tests/: test_audiomanager.cpp  test_config.cpp  test_types.cpp
ui/qml/: AppsView.qml  ChannelStrip.qml  ConnectionError.qml  Main.qml  MainView.qml  MixerView.qml  SettingsView.qml  SetupWizard.qml  qml.qrc
ui/src/: main.cpp
